# PicProcessLib

./: CMakeLists.txt  main.c
lab1/: GrayProcess.c  RGBDepartureProcess.c  ReverseProcess.c  lab1.c  lab1.h
lab10/: lab10.c  lab10.h
lab2/: HistogramEqualization.c  MakeHistogram.c  lab2.c  lab2.h
lab3/: avag.c  lab3.c  lab3.h  mid.c
lab4/: lab4.c  lab4.h  mirror.c  revolve.c  shrink.c  translate.c
lab5/: Otsu.c  T.c  iterate.c  lab5.c  lab5.h
lab5/tool/: tool.c  tool.h
lab6/: lab6.c  lab6.h
lab7/: lab7.c  lab7.h  prewitt.c  sobel.c
lab8/: lab8.c  lab8.h
lab9/: lab9.c  lab9.h
tools/: ImagefileHelper.c  ImagefileHelper.h
